# tsmap

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  IDEAS.md  README.md  WMAP_ISSUES.md  eslint.config.js  index.html  package-lock.json  package.json  test-list.csv  vite.config.ts  zensical.toml
.claude/: settings.json
docs/: development.md  index.md  tsmap-theme.css  user-guide.md  web.md
sample_data/: CLUST-LOT-03.atdf  CLUST-LOT-03.stdf  CLUST-LOT-03_W01.atdf  CLUST-LOT-03_W01.stdf  CLUST-LOT-03_W02.atdf  CLUST-LOT-03_W02.stdf  CLUST-LOT-03_W03.atdf  CLUST-LOT-03_W03.stdf  CLUST-LOT-03_W04.atdf  CLUST-LOT-03_W04.stdf  CLUST-LOT-03_W05.atdf  CLUST-LOT-03_W05.stdf  CLUST-LOT-03_W06.atdf  CLUST-LOT-03_W06.stdf  CLUST-LOT-03_W07.atdf  CLUST-LOT-03_W07.stdf  EDGE-LOT-01.atdf  EDGE-LOT-01.stdf  EDGE-LOT-01_W01.atdf  EDGE-LOT-01_W01.stdf  EDGE-LOT-01_W02.atdf  EDGE-LOT-01_W02.stdf  EDGE-LOT-01_W03.atdf  EDGE-LOT-01_W03.stdf  EDGE-LOT-01_W04.atdf  EDGE-LOT-01_W04.stdf  EDGE-LOT-01_W05.atdf  EDGE-LOT-01_W05.stdf  EDGE-LOT-01_W06.atdf  EDGE-LOT-01_W06.stdf  EDGE-LOT-01_W07.atdf  EDGE-LOT-01_W07.stdf  EDGE-LOT-01_W08.atdf  EDGE-LOT-01_W08.stdf  HY-LOT-04.atdf  HY-LOT-04.stdf  HY-LOT-04_W01.atdf  HY-LOT-04_W01.stdf  HY-LOT-04_W02.atdf  HY-LOT-04_W02.stdf  (+34 more)
scripts/: build-user-guide.mjs  capture-definitions.mjs  capture-screenshots.mjs  check-testdata-parser-published.js  check-version-sync.js  check-wmap-published.js  check-wmap-update.js  generate_atdf.py  generate_atdf_bench.py  generate_csv_json_bench.py  generate_sample_files.py  generate_stdf.py  generate_stdf_bench.py  generate_stdf_corner_lot.py  generate_stdf_correlated.py  generate_stdf_large.py  generate_test_suite.py
src/: atdfParser.ts  fileLoader.ts  guideImages.ts  (+26 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_files.rs  lib.rs  main.rs
src-tauri/src/commands/: atdf_test_names.rs  extract_archive.rs  get_startup_files.rs  last_dir.rs  mod.rs  parse_atdf.rs  parse_atdf_filtered.rs  parse_csv.rs  parse_json.rs  parse_stdf.rs  parse_stdf_filtered.rs  pick_file.rs  read_file.rs  read_text_file.rs  respawn_new_instance.rs  save_file.rs  stdf_test_names.rs  write_temp_html.rs
(+22 files in other folders)
