[package]
name = "tsmap"
version = "0.1.14"
description = "Desktop application for loading and visualising semiconductor wafer map data"
authors = ["Paul Robins"]
edition = "2024"
default-run = "tsmap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tsmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }
libc = "0.2.186"
zip = "8.6.0"
testdata-parser = { path = "../packages/parsers", features = ["native"] }

[dev-dependencies]
tempfile = "3"
